--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "tech-blog",
+  "name": "y",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,5 +30,6 @@
   "bugs": {
     "url": "https://github.com/ptriv1/tech-blog/issues"
   },
-  "homepage": "https://github.com/ptriv1/tech-blog#readme"
+  "homepage": "https://github.com/ptriv1/tech-blog#readme",
+  "description": ""
 }
